# pg-utf8-transcoder

./: .gitignore  Doxyfile.in.tc  Makefile  Makefile.in  README.md  bootstrap.sh  configure  configure.ac  transcoder-defs.mk
autom4te.cache/: output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
html/: index.html
latex/: doxygen.sty  refman.tex
sql/: get_max_shortest_unique_key_values.sql  get_min_shortest_unique_key_values.sql  get_next_shortest_unique_key_values.sql  get_next_shortest_unique_key_values_desc.sql  get_shortest_unique_key(name,name,name[],name[]).sql  get_unique_key_value.sql  quoted_elements(anyarray).sql  zip(anyarray,anyarray).sql
src/: .gitignore  Makefile.am  Makefile.in  colresult.c  colresult.h  convert.c  convert.h  flagcb.c  flagcb.h  log.c  log.h  main.c  transcoder-utils.c  transcoder-utils.h  transcoder.c  transcoder.h  vector.c  vector.h
test-data/: run-test.sh
